# enchiladas

./: .gitignore  CMakeLists.txt  README.md  tapestry.js.coarse
extra/gui_app/: app.html  app.html.template  generate_configs.py  gui.html
extra/gui_app/css/: design_gallery.css  gui.css
extra/gui_app/js/: gui.js  tapestry.js
extra/gui_app/plugins/: bw.py  bw2  gif  remove  tapestry_plugin.py  test  watermark
include/: EnchiladaServer.h  enchiladas.h  utils.h
src/: EnchiladaServer.cpp  enchiladas.cpp  index.html  server.cpp  utils.cpp
src/css/: style.css
src/js/: arcball.js  enchiladas.js  main.js  tapestry.js  testing.js  tools.js
